--- a/12_09_04_Diary.md
+++ b/12_09_04_Diary.md
@@ -17,3 +17,5 @@
 一応、私の中で原因の目星がついており、その内容は２つ。「デフォルメに慣れておらず顔を小さく描きがち」ということと、「輪郭から描くことに慣れていない」とうこと。
 
 単純な話、沢山絵を描いて慣れろで解決しそうだけれど、実際に解決するかどうか不安。そんな事を言う前に描けという事ですかな。
+
+ちなみに監禁のやつは描き直します。そのうち。
